修改部分主题的日历顶栏的颜色bug
部分主题的日历顶栏及左右按钮的颜色重叠导致看不清楚按钮的位置，修改相关css以修正

--- a/simpleui/static/admin/simpleui-x/theme/admin.lte.css
+++ b/simpleui/static/admin/simpleui-x/theme/admin.lte.css
@@ -155,11 +155,14 @@ a:visited {
   color: rgba(32, 150, 200, 0.8) !important;
 }
 .module h2,
-.module caption,
 .inline-group h2,
 .selector-chosen h2 {
   background: #fff !important;
   color: #FFF !important;
+}
+.module caption{
+	background: #3c8dbc !important;
+	color: #FFF !important;
 }
 #changelist .actions {
   min-height: 38px;
