--- a/simpleui/static/admin/simpleui-x/theme/layui.css
+++ b/simpleui/static/admin/simpleui-x/theme/layui.css
@@ -155,11 +155,14 @@ a:visited {
   color: rgba(0, 150, 136, 0.8) !important;
 }
 .module h2,
-.module caption,
 .inline-group h2,
 .selector-chosen h2 {
   background: rgba(255, 255, 255, 0.7) !important;
   color: #fff !important;
+}
+.module caption{
+	background: rgba(255, 255, 255, 0.7) !important;
+	color: #393D49 !important;
 }
 #changelist .actions {
   min-height: 38px;
