--- a/simpleui/static/admin/simpleui-x/theme/x-blue.css
+++ b/simpleui/static/admin/simpleui-x/theme/x-blue.css
@@ -155,11 +155,14 @@ a:visited {
   color: rgba(30, 159, 255, 0.8) !important;
 }
 .module h2,
-.module caption,
 .inline-group h2,
 .selector-chosen h2 {
   background: #303133 !important;
   color: #FFF !important;
+}
+.module caption{
+	background: #1E9FFF !important;
+	color: #fff !important;
 }
 #changelist .actions {
   min-height: 38px;
