--- a/simpleui/static/admin/simpleui-x/theme/e-black-pro.css
+++ b/simpleui/static/admin/simpleui-x/theme/e-black-pro.css
@@ -155,11 +155,14 @@ a:visited {
   color: rgba(31, 44, 57, 0.8) !important;
 }
 .module h2,
-.module caption,
 .inline-group h2,
 .selector-chosen h2 {
   background: #FFF !important;
   color: #FFF !important;
+}
+.module caption{
+	background: #fff !important;
+	color: #1f2c39 !important;
 }
 #changelist .actions {
   min-height: 38px;
